--- a/web/styles/icon.styl
+++ b/web/styles/icon.styl
@@ -7,6 +7,12 @@
   margin-right 5px
   cursor pointer
 
+.list-item-icon-opt
+  display inline-block
+  height: 30px
+  width: 30px
+  background url(./icon/list_icon.png) 0 0 no-repeat
+
 .user-list-add
   background-position -563px -594px
 
@@ -117,5 +123,13 @@
   margin-top: 8px;
   padding 3px
   border-bottom 1px solid #ccc
+}
+
+.create-item-btn-icon{
+  @extend .list-item-icon-opt
+  background-position 0 -104px
+  vertical-align: top;
+  margin-top: 60px;
+  margin-right: 10px;
 }
 
