--- a/web/styles/icon.styl
+++ b/web/styles/icon.styl
@@ -13,6 +13,14 @@
   width: 30px
   background url(./icon/list_icon.png) 0 0 no-repeat
 
+.component-item-opt
+  display inline-block
+  width: 20px
+  height 20px
+  background url(./icon/wjsj_toolico_off.png) 0 0 no-repeat
+  margin: -3px 5px 0 0;
+  vertical-align middle
+
 .user-list-add
   background-position -563px -594px
 
@@ -133,3 +141,77 @@
   margin-right: 10px;
 }
 
+.componentItem1{
+  @extends .component-item-opt
+  background-position: 0 -119px;
+}
+
+.componentItem2{
+  @extends .component-item-opt
+  background-position: 0 -140px;
+}
+
+.componentItem3{
+  @extends .component-item-opt
+  background-position: 0 -650px;
+}
+
+.componentItem4{
+  @extends .component-item-opt
+  background-position: 0 -358px;
+}
+
+.componentItem5{
+  @extends .component-item-opt
+  background-position: 0 -220px;
+}
+
+.componentItem6{
+  @extends .component-item-opt
+  background-position: 0 -200px;
+}
+
+.componentItem7{
+  @extends .component-item-opt
+  background-position: 0 -180px;
+}
+
+.componentItem8{
+  @extends .component-item-opt
+  background-position: -20px -609px;
+}
+
+.componentItem9{
+  @extends .component-item-opt
+  background-position: -20px -630px;
+}
+
+.componentItem10{
+  @extends .component-item-opt
+  background-position: 0 -260px;
+}
+
+.componentItem11{
+  @extends .component-item-opt
+  background-position: 0 -320px;
+}
+
+.componentItem12{
+  @extends .component-item-opt
+  background-position: 0 -567px;
+}
+
+.componentItem13{
+  @extends .component-item-opt
+  background-position: 0 -857px;
+}
+
+.componentItem14{
+  @extends .component-item-opt
+  background-position: 0 -900px;
+}
+
+.componentItem15{
+  @extends .component-item-opt
+  background-position: 0 -340px;
+}
