--- a/web/styles/main.styl
+++ b/web/styles/main.styl
@@ -7,6 +7,7 @@
 @import "containers/index.styl"
 @import "containers/demoPage.styl"
 @import "containers/list.styl"
+@import "containers/edit.styl"
 
 body {
   word-break: break-all;
