--- a/web/styles/containers/edit.styl
+++ b/web/styles/containers/edit.styl
@@ -11,3 +11,49 @@
   width 1020px
   margin: auto
   margin-top 20px
+
+.paperItemHead-container
+  width: 860px;
+  background-color #FFF
+
+.slideComponent-container,
+.paperComponent-container{
+  display: inline-block;
+  vertical-align: top;
+}
+.paperComponent-container
+  font-size: 18px;
+  line-height: 18px;
+  padding-bottom: 50px;
+
+.paperComponent-container
+  margin-left: 10px;
+
+.paperItemHead-title
+  text-align: center;
+  padding: 16px 57px;
+  padding-right: 50px;
+  border-top: 1px solid #eee;
+
+.paperComponent-container
+  width: 860px;
+
+.paperItemHead-container
+  background: #fff;
+
+.paperItemHead-down
+  height: 49px;
+  border-top: 1px solid #eee;
+
+.paperItemHead-left
+  width: 50px;
+  border-right: 1px solid #eee;
+  display: inline-block;
+  height: 49px;
+
+.paperItemHead-down p
+  display: inline-block;
+  vertical-align: top;
+  line-height: 49px;
+  padding: 0 5px;
+  width: 799px;
