--- a/web/styles/containers/edit.styl
+++ b/web/styles/containers/edit.styl
@@ -1,13 +1,15 @@
 .componentItem-container {
-  background-color: #FFF;
-  width: 140px;
-  height: 30px;
-  line-height: 30px;
-  border-top: 1px solid #F6F7F7;
-  cursor pointer
+    background-color: #fff;
+    width: 140px;
+    height: 30px;
+    line-height: 30px;
+    border-top: 1px solid #f6f7f7;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 0 5px;
 }
 
-.edit-container
+.edit-container                                                                                      
   width 1020px
   margin: auto
   margin-top 20px
@@ -27,7 +29,7 @@
   padding-bottom: 50px;
 
 .paperComponent-container
-  margin-left: 10px;
+  padding-left: 10px;
 
 .paperItemHead-title
   text-align: center;
