--- a/web/styles/containers/list.styl
+++ b/web/styles/containers/list.styl
@@ -4,6 +4,8 @@
   border: dashed 1px #b0b0b0;
   background: #ffffff;
   border-radius 5px
+  margin: 5px
+  display: inline-block
 }
 .list-item-container:hover
     box-shadow: 0px 0px 20px #838383;
@@ -21,7 +23,7 @@
 }
 
 .list-container
-  width: 1212px
+  width: 992px
   margin auto
   margin-top 50px
 
