--- a/web/styles/icon.styl
+++ b/web/styles/icon.styl
@@ -274,3 +274,16 @@
   background-position: -20px -180px
   margin 5px
 }
+
+.componetEditAdd{
+  @extends .component-item-opt
+  background-position: -20px -200px;
+  margin: 5px;
+  cursor:pointer;
+}
+
+.componetEditAdd:hover{
+  @extends .component-item-opt-hover
+  background-position: -20px -200px;
+  margin: 5px;
+}
