--- a/web/styles/containers/edit.styl
+++ b/web/styles/containers/edit.styl
@@ -9,11 +9,6 @@
     padding: 0 5px;
 }
 
-.edit-container                                                                                      
-  width 1020px
-  margin: auto
-  margin-top 20px
-
 .paperItemHead-container
   width: 860px;
   background-color #FFF
@@ -59,3 +54,46 @@
   line-height: 49px;
   padding: 0 5px;
   width: 799px;
+
+.edit-button-container
+  height: 45px;
+  line-height: 45px;
+  text-align: right;
+  background: #fafafa;
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+
+.edit-content-container
+  width 1020px
+  margin: auto
+  margin-top 20px
+
+.publish
+.preview
+.back
+    color: #53a4f4;
+    margin-top: 6px;
+    margin-right: 11px;
+    margin-left: 20px;
+    width: 56px;
+    border-radius: 2px;
+    height: 27px;
+    line-height: 27px;
+    text-align: center;
+    border: 1px solid #53a4f4;
+    background: none;
+    cursor:pointer
+
+.publish:hover
+.preview:hover
+.back:hover
+  color: #fff;
+  background-color: #6FC5FF
+
+.back
+  float left
+
+.preview
+.publish
+  float right
+  width 75px
