--- a/web/styles/main.styl
+++ b/web/styles/main.styl
@@ -8,6 +8,8 @@
 @import "containers/list.styl"
 @import "containers/edit.styl"
 
+@import "./iconfont.styl"
+
 body {
   word-break: break-all;
   word-wrap: break-word;
